[package]
name = "trails"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
druid = "0.7"
regex = "1"
once_cell = "1.13"
log = "0.4"
simple_logger = "2.2"
reqwest = { version = "0.11", features = ["blocking"] }
