[package]
name = "trails"
description = "Experimental web browser written from scratch"
version = "0.0.1"
edition = "2021"
categories = ["web-programming::http-client", "parser-implementations"]
repository = "https://github.com/fwcd/trails"
license = "GPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
trails-base = { path = "../trails-base" }
trails-model = { path = "../trails-model" }
trails-network = { path = "../trails-network" }
druid = { git = "https://github.com/linebender/druid.git", rev = "20beabe", features = ["default", "im"] }
simple_logger = "2.2"
